# ucobsremoteplugin

./: CMakeLists.txt  README.md  buildspec.json  common.cpp  common.h  enumerators.h  networkconnection.cpp  networkconnection.h  networkserver.h  obsobjects.h  obsremoteprotocol.h  statistics.h  ucobscontrolplugin.pkgproj
.github/scripts/: .Brewfile.lock.json
.github/workflows/: main.yml
CI/: mac-build.sh  mac-install.sh  mac-package.sh
CI/macos/ucobscontrolplugin.xcworkspace/xcuserdata/james.xcuserdatad/: UserInterfaceState.xcuserstate
CI/workflows/: main.yml
cmake/bundle/windows/: ucobscontrolplugin.rc.in
installer/: installer.iss
macos/ucobscontrolplugin.xcworkspace/: contents.xcworkspacedata
macos/ucobscontrolplugin.xcworkspace/xcuserdata/james.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/: common.h  enumerators.cpp  frontend.cpp  frontend.h  networkconnection.cpp  networkconnection.h  networkserver.cpp  networkserver.h  obsobjects.cpp  obsobjects.h  plugin-macros.generated.h  protocoladapter.cpp  protocoladapter.h  statistics.cpp  ucobscontrolplugin.cpp  ucobscontrolplugin.h
